# HashingDeepLearning

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
SLIDE/: Bucket.cpp  Bucket.h  Config.h  Config_amz.csv  DensifiedMinhash.cpp  DensifiedMinhash.h  DensifiedWtaHash.cpp  DensifiedWtaHash.h  InputSpecificActiveNetworkFactory.h  LSH.cpp  LSH.h  Layer.cpp  Layer.h  Makefile  MurmurHash.cpp  MurmurHash.h  Network.cpp  Network.h  Node.cpp  Node.h  SLIDE.sln  SLIDE.vcxproj  Util.cpp  Util.h  WtaHash.cpp  WtaHash.h  main.cpp  srp.cpp  srp.h  temp.py
SLIDE/hieu/: Layer.cpp  Layer.h  Network.cpp  Network.h  Node.cpp  Node.h  hieu-main.cpp  hieu-main.h
bgd/: Bucket.cpp  Bucket.h  Config.h  LSH.cpp  Layer.cpp  Layer.h  Network.cpp  Network.h  Node.cpp  Node.h  Timer.cpp  Timer.h  WtaHash.cpp  main.cpp  plot.py  srp.cpp  srp.h  tensorflow_mnist.py
bgd/origin/: CMakeLists.txt  Config.h  Layer.cpp  Layer.h  Makefile  Network.cpp  Node.cpp  Node.h  main.cpp
bgd_new/: Bucket.cpp  Config.h  Config_aloi.csv  Config_amzcat.csv  Config_delicious.csv  Config_mnist.csv  Config_q2bn.csv  Config_wiki.csv  Config_wiki10.csv  Config_wiki500.csv  DensifiedWtaHash.cpp  DensifiedWtaHash.h  LSH.cpp  Layer.cpp  Layer.h  Network.cpp  Network.h  Node.cpp  Node.h  main.cpp  plot.py
bgd_origin/: Bucket.cpp  Config.h  Config_mnist.csv  Config_q2bn.csv  Layer.cpp  Layer.h  Network.cpp  Network.h  Node.cpp  Node.h  WtaHash.cpp  main.cpp
origin/: Config_mnist.csv  LSH.cpp  LSH.h  Layer.cpp  Layer.h  Network.cpp  Node.cpp  Node.h  WtaHash.h  main.cpp
python_examples/: config.py  example_full_softmax.py  example_sampled_softmax.py  util.py
sgd/: Bucket.cpp  Bucket.h  Config.h  LSH.cpp  LSH.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Node.cpp  Node.h  VectorUtils.cpp  VectorUtils.h  WtaHash.cpp  WtaHash.h  main.cpp  tensorflow_mnist.py
sgd/origin/: Config.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Node.cpp  Node.h  main.cpp
sgd/tf/: checkpoint  label.csv  mnist.py  tensorflow_mnist.py  test.csv  testNet.py
sgd_new/: Bucket.cpp  Bucket.h  Config.h  Config_aloi.csv  Config_criteo.csv  Config_mnist.csv  Config_q2asin.csv  Config_q2bn.csv  Config_wiki.csv  DensifiedMinhash.cpp  DensifiedMinhash.h  LSH.cpp  Layer.cpp  Layer.h  Network.cpp  Node.cpp  Node.h  convert.py  main.cpp  plot.py  preprocess.py  srp.cpp  sublime_criteo.py  xml_multilabel.py  xml_multilabel_amz.py  xml_multilabel_amzcat.py  xml_multilabel_criteo.py  xml_multilabel_delicious.py  xml_multilabel_wiki.py  xml_multilabel_wiki10.py  xml_multilabel_wiki500.py  xml_sampled_delicious.py  xml_topk.py  xml_topk_delicious.py  xml_topk_mnist.py  xml_topk_wiki.py  xml_topk_wiki500.py  xml_topk_wiki_debug.py
