cmake_minimum_required(VERSION 3.13)
project(HashingDeepLearning)

set(CMAKE_CXX_STANDARD 14)

include_directories(bgd)
include_directories(bgd/origin)
include_directories(bgd_new)
include_directories(bgd_origin)
include_directories(origin)
include_directories(sgd)
include_directories(sgd/origin)
include_directories(sgd_new)

add_executable(HashingDeepLearning
        bgd/origin/Config.h
        bgd/origin/InputSpecificActiveNetworkFactory.h
        bgd/origin/Layer.cpp
        bgd/origin/Layer.h
        bgd/origin/main.cpp
        bgd/origin/Network.cpp
        bgd/origin/Network.h
        bgd/origin/Node.cpp
        bgd/origin/Node.h
        bgd/Bucket.cpp
        bgd/Bucket.h
        bgd/Config.h
        bgd/InputSpecificActiveNetworkFactory.h
        bgd/Layer.cpp
        bgd/Layer.h
        bgd/LSH.cpp
        bgd/LSH.h
        bgd/main.cpp
        bgd/MurmurHash.cpp
        bgd/MurmurHash.h
        bgd/Network.cpp
        bgd/Network.h
        bgd/Node.cpp
        bgd/Node.h
        bgd/srp.cpp
        bgd/srp.h
        bgd/Timer.cpp
        bgd/Timer.h
        bgd/VectorUtils.cpp
        bgd/VectorUtils.h
        bgd/WtaHash.cpp
        bgd/WtaHash.h
        bgd_new/Bucket.cpp
        bgd_new/Bucket.h
        bgd_new/Config.h
        bgd_new/DensifiedMinhash.cpp
        bgd_new/DensifiedMinhash.h
        bgd_new/DensifiedWtaHash.cpp
        bgd_new/DensifiedWtaHash.h
        bgd_new/InputSpecificActiveNetworkFactory.h
        bgd_new/Layer.cpp
        bgd_new/Layer.h
        bgd_new/LSH.cpp
        bgd_new/LSH.h
        bgd_new/main.cpp
        bgd_new/MurmurHash.cpp
        bgd_new/MurmurHash.h
        bgd_new/Network.cpp
        bgd_new/Network.h
        bgd_new/Node.cpp
        bgd_new/Node.h
        bgd_new/srp.cpp
        bgd_new/srp.h
        bgd_new/WtaHash.cpp
        bgd_new/WtaHash.h
        bgd_origin/Bucket.cpp
        bgd_origin/Bucket.h
        bgd_origin/Config.h
        bgd_origin/InputSpecificActiveNetworkFactory.h
        bgd_origin/Layer.cpp
        bgd_origin/Layer.h
        bgd_origin/LSH.cpp
        bgd_origin/LSH.h
        bgd_origin/main.cpp
        bgd_origin/MurmurHash.cpp
        bgd_origin/MurmurHash.h
        bgd_origin/Network.cpp
        bgd_origin/Network.h
        bgd_origin/Node.cpp
        bgd_origin/Node.h
        bgd_origin/WtaHash.cpp
        bgd_origin/WtaHash.h
        origin/Bucket.cpp
        origin/Bucket.h
        origin/Config.h
        origin/InputSpecificActiveNetworkFactory.h
        origin/Layer.cpp
        origin/Layer.h
        origin/LSH.cpp
        origin/LSH.h
        origin/main.cpp
        origin/MurmurHash.cpp
        origin/MurmurHash.h
        origin/Network.cpp
        origin/Network.h
        origin/Node.cpp
        origin/Node.h
        origin/WtaHash.cpp
        origin/WtaHash.h
        sgd/origin/Config.h
        sgd/origin/InputSpecificActiveNetworkFactory.h
        sgd/origin/Layer.cpp
        sgd/origin/Layer.h
        sgd/origin/main.cpp
        sgd/origin/Network.cpp
        sgd/origin/Network.h
        sgd/origin/Node.cpp
        sgd/origin/Node.h
        sgd/Bucket.cpp
        sgd/Bucket.h
        sgd/Config.h
        sgd/InputSpecificActiveNetworkFactory.h
        sgd/Layer.cpp
        sgd/Layer.h
        sgd/LSH.cpp
        sgd/LSH.h
        sgd/main.cpp
        sgd/MurmurHash.cpp
        sgd/MurmurHash.h
        sgd/Network.cpp
        sgd/Network.h
        sgd/Node.cpp
        sgd/Node.h
        sgd/Timer.cpp
        sgd/Timer.h
        sgd/VectorUtils.cpp
        sgd/VectorUtils.h
        sgd/WtaHash.cpp
        sgd/WtaHash.h
        sgd_new/Bucket.cpp
        sgd_new/Bucket.h
        sgd_new/Config.h
        sgd_new/DensifiedMinhash.cpp
        sgd_new/DensifiedMinhash.h
        sgd_new/DensifiedWtaHash.cpp
        sgd_new/DensifiedWtaHash.h
        sgd_new/InputSpecificActiveNetworkFactory.h
        sgd_new/Layer.cpp
        sgd_new/Layer.h
        sgd_new/LSH.cpp
        sgd_new/LSH.h
        sgd_new/main.cpp
        sgd_new/MurmurHash.cpp
        sgd_new/MurmurHash.h
        sgd_new/Network.cpp
        sgd_new/Network.h
        sgd_new/Node.cpp
        sgd_new/Node.h
        sgd_new/srp.cpp
        sgd_new/srp.h
        sgd_new/WtaHash.cpp
        sgd_new/WtaHash.h)
